--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,13 @@ thiserror = "1.0"
 # interop
 windows = "0.11.0"
 
+[dev-dependencies]
+criterion = "0.3"
+
 [build-dependencies]
 windows = "0.11.0"
+
+[[bench]]
+name = "dxgi"
+path = "bench/dxgi.rs"
+harness = false
